--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,12 +8,12 @@
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
-		<!--  <service android:name=".services.mobService.MobService">
+		<service android:name=".api.examples.helloworld.services.AdapterService">
 			<intent-filter>
 				<action android:name="thesis.mobilis.services.iMobService"></action>
 			</intent-filter>
-		</service>-->
-	<service android:name=".services.adapter.AdapterService"><intent-filter><action android:name="thesis.mobilis.services.iAdapter"></action>
+		</service>
+	<service android:name=".api.examples.helloworld.services.AdapterService"><intent-filter><action android:name="thesis.mobilis.services.iAdapter"></action>
 </intent-filter>
 </service>
 </application>
