--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,7 +16,7 @@
 	<service android:name=".examples.helloworld.services.MobService"><intent-filter><action android:name="thesis.mobilis.examples.helloworld.services.iMobService"></action>
 </intent-filter>
 </service>
-<service android:name=".api.impl.loader.ComponentLoader"><intent-filter><action android:name="thesis.mobilis.api.impl.loader.ComponentLoader"></action>
+<service android:name=".impl.loader.ComponentLoader"><intent-filter><action android:name="thesis.mobilis.impl.loader.ComponentLoader"></action>
 </intent-filter>
 </service>
 </application>
