Trying to load class on other process GPS ok

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -34,7 +34,7 @@
 				<action android:name="mobilis.context.IProviderService"></action>
 			</intent-filter>
 		</service>
-		<activity android:name="mobilis.examples.navigator.NavigatorActivity">
+		<activity android:name="mobilis.examples.navigator.puc.NavigatorPUCActivity">
 			<intent-filter>
 				<action android:name="android.intent.action.VIEW"></action>
 				<category android:name="android.intent.category.LAUNCHER"></category>
