Remote and local component loading and usage New interfaces for configuring components

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -34,5 +34,10 @@
 				<action android:name="mobilis.context.IProviderService"></action>
 			</intent-filter>
 		</service>
+		<service android:name="mobilis.context.location.LocationProviderComponentLoader">
+			<intent-filter>
+				<action android:name="mobilis.context.location.LocationProviderComponent"></action>
+			</intent-filter>
+		</service>
 	</application>
 </manifest>
