--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,7 +8,7 @@
 	<application android:icon="@drawable/mobilis"
 		android:label="@string/app_name">
 		<uses-library android:name="com.google.android.maps" />
-		<activity android:label="@string/app_name" android:name=".PingPongApp">
+		<activity android:label="@string/app_name" android:name=".NavigatorApp">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
@@ -36,7 +36,7 @@
 		</service>
 		<service android:name="mobilis.context.location.LocationProviderComponentLoader">
 			<intent-filter>
-				<action android:name="mobilis.context.location.LocationProviderComponent"></action>
+				<action android:name="mobilis.context.location"></action>
 				<action android:name="loc"></action>
 			</intent-filter>
 		</service>
