--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	android:versionCode="1" android:versionName="1.0.0" package="mobilis.app">
+	android:versionCode="1" android:versionName="1.0.0" package="kaluana.app">
 	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
 	<uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION"></uses-permission>
@@ -9,56 +9,56 @@
 		android:label="@string/app_name">
 		<uses-library android:name="com.google.android.maps" />
 		<uses-library android:name="android.test.runner" />
-		<activity android:label="@string/app_name" android:name=".NavigatorApp">
+		<activity android:label="@string/app_name" android:name=".PingPongApp">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
-		<service android:name="mobilis.impl.control.ComponentManager">
+		<service android:name="kaluana.impl.control.ComponentManager">
 			<intent-filter>
-				<action android:name="mobilis.api.control.IComponentManager"></action>
+				<action android:name="kaluana.api.control.IComponentManager"></action>
 			</intent-filter>
 		</service>
-		<service android:name="mobilis.examples.pingpong.PingService">
+		<service android:name="kaluana.examples.pingpong.PingService">
 			<intent-filter>
-				<action android:name="mobilis.examples.pingpong.IPingService"></action>
+				<action android:name="kaluana.examples.pingpong.IPingService"></action>
 			</intent-filter>
 		</service>
-		<service android:name="mobilis.examples.pingpong.PongService">
+		<service android:name="kaluana.examples.pingpong.PongService">
 			<intent-filter>
-				<action android:name="mobilis.examples.pingpong.IPongService"></action>
+				<action android:name="kaluana.examples.pingpong.IPongService"></action>
 			</intent-filter>
 		</service>
-		<service android:name="mobilis.context.ProviderService">
+		<service android:name="kaluana.context.ProviderService">
 			<intent-filter>
-				<action android:name="mobilis.context.IProviderService"></action>
+				<action android:name="kaluana.context.IProviderService"></action>
 			</intent-filter>
 		</service>
-		<service android:name="mobilis.context.location.LocationProviderComponentLoader">
+		<service android:name="kaluana.context.location.LocationProviderComponentLoader">
 			<intent-filter>
-				<action android:name="mobilis.context.location"></action>
+				<action android:name="kaluana.context.location"></action>
 				<action android:name="loc"></action>
 			</intent-filter>
 		</service>
-		<service android:name="mobilis.context.location.SemanticLocationService">
+		<service android:name="kaluana.context.location.SemanticLocationService">
 			<intent-filter>
-				<action android:name="mobilis.context.location.ISemanticLocationService"></action>
+				<action android:name="kaluana.context.location.ISemanticLocationService"></action>
 			</intent-filter>
 		</service>
-		<service android:name="mobilis.examples.pingpong.PingComponentLoader">
+		<service android:name="kaluana.examples.pingpong.PingComponentLoader">
 			<intent-filter>
-				<action android:name="mobilis.examples.ping"></action>
+				<action android:name="kaluana.examples.ping"></action>
 				<action android:name="loc"></action>
 			</intent-filter>
 		</service>
-		<service android:name="mobilis.examples.pingpong.PongComponentLoader">
+		<service android:name="kaluana.examples.pingpong.PongComponentLoader">
 			<intent-filter>
-				<action android:name="mobilis.examples.pong"></action>
+				<action android:name="kaluana.examples.pong"></action>
 				<action android:name="loc"></action>
 			</intent-filter>
 		</service>
 	</application>
 	<instrumentation android:name="android.test.InstrumentationTestRunner"
-		android:targetPackage="mobilis.app" android:label="Mobilis Control Tests" />
+		android:targetPackage="kaluana.app" android:label="Mobilis Control Tests" />
 </manifest>
