--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,7 +9,7 @@
 		android:label="@string/app_name">
 		<uses-library android:name="com.google.android.maps" />
 		<uses-library android:name="android.test.runner" />
-		<activity android:label="@string/app_name" android:name=".PingPongApp">
+		<activity android:label="@string/app_name" android:name=".NavigatorApp">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
