--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,7 @@
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
 	<uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION"></uses-permission>
 	<uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS"></uses-permission>
-	<application android:icon="@drawable/mobilis"
+	<application android:icon="@drawable/kaluana"
 		android:label="@string/app_name">
 		<uses-library android:name="com.google.android.maps" />
 		<uses-library android:name="android.test.runner" />
