some philosophical changes

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,7 +9,7 @@
 		android:label="@string/app_name">
 		<uses-library android:name="com.google.android.maps" />
 		<uses-library android:name="android.test.runner" />
-		<activity android:label="@string/app_name" android:name=".KaluanaMapApp">
+		<activity android:label="@string/app_name" android:name=".PingPongApp">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
@@ -61,4 +61,5 @@
 	</application>
 	<instrumentation android:name="android.test.InstrumentationTestRunner"
 		android:targetPackage="kaluana.app" android:label="Mobilis Control Tests" />
+	<uses-sdk android:minSdkVersion="3" />
 </manifest>
